SSCSCI-2560 Issue generic letter event <=10 send via Gov.Notify, more than 10 pages send via Bulk print
Add tests back in.